--- a/ui/html/index.html
+++ b/ui/html/index.html
@@ -5,7 +5,14 @@
     <title>Forum - Главная</title>
 </head>
 <body>
-    <h1>Добро пожаловать в форум!</h1>
+    <header>
+        <h1><a href='/'>Welcome to Forum</a></h1>
+    </header>
+    <main>
+        <h2>Latest Snippets</h2>
+        <p>There's nothing to see here yet!</p>
+    </main>
     <p><a href="/register">Регистрация</a> | <a href="/login">Войти</a></p>
+    <footer>Powered by <a href='https://t.me/zz_maga'>Magzhan</a></footer>
 </body>
 </html>
