--- a/ui/html/sign-in.html
+++ b/ui/html/sign-in.html
@@ -1,13 +1,17 @@
 {{ define "content" }}
-<h1>Sign in</h1>
-<form method="post" action="/signin">
-  <label>Login (nickname or email)
-    <input name="login" type="text" required />
-  </label>
-  <label>Password
-    <input name="password" type="password" required />
-  </label>
-  <button type="submit">Sign in</button>
-</form>
+<div class="form-container">
+  <div class="form-wrapper">
+    <h1 class="form-title">Sign in</h1>
+    <form method="post" action="/signin">
+      <label>Email
+        <input name="email" type="email" required />
+      </label>
+      <label>Password
+        <input name="password" type="password" required />
+      </label>
+      <button type="submit">Sign in</button>
+    </form>
+  </div>
+</div>
 {{ end }}
 
