--- a/ui/html/sign-up.html
+++ b/ui/html/sign-up.html
@@ -1,16 +1,20 @@
 {{ define "content" }}
-<h1>Sign up</h1>
-<form method="post" action="/signup">
-  <label>Nickname
-    <input name="nickname" type="text" required />
-  </label>
-  <label>Email
-    <input name="email" type="email" required />
-  </label>
-  <label>Password
-    <input name="password" type="password" required />
-  </label>
-  <button type="submit">Create account</button>
-</form>
+<div class="form-container">
+  <div class="form-wrapper">
+    <h1 class="form-title">Sign up</h1>
+    <form method="post" action="/signup">
+      <label>Nickname
+        <input name="nickname" type="text" required />
+      </label>
+      <label>Email
+        <input name="email" type="email" required />
+      </label>
+      <label>Password
+        <input name="password" type="password" required />
+      </label>
+      <button type="submit">Create account</button>
+    </form>
+  </div>
+</div>
 {{ end }}
 
